<resources>
    <string name="app_name">Randomovie</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="security_description">By signing up, you agree to the <b>Terms of Service</b> and <b>Data Processing Agreement</b></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Log In</string>
    <string name="or_login_with">Or login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="random_movie_picker">Random Movie Picker</string>
</resources>