<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--  Top Block  -->
    <View
        android:id="@+id/topBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_blue" />
    <!-- Bottom Block -->

    <!-- Logo -->

    <View
        android:id="@+id/bottomBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBackground"
        app:layout_constraintVertical_bias="1.0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white" />

    <ImageView
        android:id="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="124dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/white_logo_no_bg_1" />

    <TextView
        android:id="@+id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Sign in to your Account"
        android:textAlignment="textStart"
        android:textColor="@color/white_smoke"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="62dp"
        android:text="Don't have an account?"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/signUpText"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintVertical_bias="1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/lake_blue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/emailTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/e_mail"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edittext_bg"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <TextView
        android:id="@+id/passwordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:text="@string/password"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <CheckBox
        android:id="@+id/rememberCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/remember_me" />

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/lake_blue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberCheck"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/loginWithLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/flash_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/or_login_with"
            android:textColor="@color/silver"
            android:textSize="16sp"
            android:textStyle="normal" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@color/flash_white" />
    </LinearLayout>

    <Button
        android:id="@+id/googleButton"
        style="@style/LightGrayButton"
        app:layout_constraintEnd_toStartOf="@+id/facebookLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="12dp"
        android:drawableLeft="@drawable/google_icon"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:text="@string/google"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/facebookLogin"
        style="@style/LightGrayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/googleButton"
        app:layout_constraintTop_toBottomOf="@+id/loginWithLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="12dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/facebook_logo"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:text="@string/facebook"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="12dp"
        android:text="@string/security_description"
        android:textAlignment="center"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>